style.css
/* ... */
@media (orientation: portrait) {
    .rotate {
        display: flex !important;
    }
}

.game-container {
    position: relative;
    display: flex;
    justify-content: center;
    align-items: center;
    width: 720px;
    height: 480px;
}

.start-icons {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%); 
    width: 100%; 
    max-width: 1200px;
    height: 90dvh;
    z-index: 100;
    display: flex;
    flex-direction: column; 
    justify-content: center;
    align-items: center;
    gap: 50px;
}

.start-icons > div,
.bottom-row > div {
    background-position: center;
    background-size: contain;
    background-repeat: no-repeat;
    cursor: pointer;
    transition: all 0.2s ease;
    display: flex;
    justify-content: center;
    align-items: center;
}

.start-game {
    width: 250px;
    height: 250px;
    background-image: url("./assets/icon/startFirstPage.png");
    background-size: contain;
    background-repeat: no-repeat;
    flex-shrink: 0; 
    &:hover {
        transform: scale(1.05) !important;
        filter: brightness(1.2);
        box-shadow: 0 0 20px rgba(255, 255, 0, 0.6);
    }
}

.bottom-row {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    width: 100%;
    gap: 5vw; 
    margin-top: 50px;
    > div {
        
        flex: 0 1 200px;
        aspect-ratio: 1/1;
        width: 400px; 
        height: 400px;
        background-size: contain;
        background-repeat: no-repeat;
        background-position: center;
        transition: all 0.2s ease;
        flex-shrink: 1;
        &:hover {
            transform: scale(1) rotate(-5deg);
            box-shadow:
                0 0 20px rgba(255, 255, 0, 0.8),
                0 0 20px rgba(255, 150, 0, 0.6);
            filter: brightness(1.1);
        }
    }
}
.screen,
.help-screen {
    p {
        color: rgb(138, 209, 7);
    }
    h2 {
        color: blueviolet;
    }
}
.help {
    background-image: url("./assets/icon/help.png");
}
.story {
    background-image: url("./assets/icon/story.png");
    &:hover {
        transform: scale(1) rotate(5deg) !important;
        box-shadow:
            0 0 20px rgba(255, 255, 0, 0.8),
            0 0 20px rgba(255, 150, 0, 0.6);
        filter: brightness(1.1);
    }
}
.impressum-icon-button {
    background-image: url("./assets/icon/inpressum.png");
    width: 250px !important; 
    height: 250px !important;
    opacity: 0.8;
    &:hover {
        transform: scale(1.05) !important;
        filter: brightness(1.2);
        box-shadow: 0 0 20px rgba(255, 255, 0, 0.6);
    }
}

.help-screen {
    flex-direction: column !important;
    justify-content: center !important;
    align-items: center !important;
    text-align: center !important;
}
help-screen .help-content,
.help-screen .help-content p {
    flex-direction: column !important;
    align-items: center !important;
    justify-content: center !important;
    text-align: center !important;
    width: 100% !important;
    margin: 5px auto !important;
}

.help-screen .buttoms {
    flex-direction: row !important;
    justify-content: center !important;
    align-items: center !important;
    gap: 30px !important;
    width: 100% !important;
    margin-top: 20px !important;
}

.help-screen .buttoms > div {
    display: flex !important;
    flex-direction: column !important;
    align-items: center !important;
    text-align: center !important;
}

.story-screen,
.help-screen {
    z-index: 10000;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    gap: 50px;
    color: white;
    text-align: center;
    p {
        font-size: 35px;
        width: 70%;
    }
}

.story-screen {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    background: rgb(0 0 0 / 75%);
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    gap: 50px;
    color: white;
    text-align: center;
    p {
        font-size: 50px;
        width: 70%;
    }
}

.help-screen,
.screen {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    text-align: center;
    background: rgba(0, 0, 0, 0.75);
    z-index: 10000; 
    pointer-events: all;
    display: flex;
    justify-content: center;
    align-items: center;
}

.start-screen {
    object-fit: cover;
    width: 100%;
    height: 480px;
    background-image: url("./assets/img/9_intro_outro_screens/start/startscreen_1.png");
    background-size: cover;
    background-position: center;
    z-index: 0;
}

.gameover-screen,
.gamewin-screen {
    object-fit: cover;
    width: 100%;
    height: 480px;
    background-size: cover;
    background-position: center;
    position: absolute;
    display: flex;
    justify-content: center;
    align-items: start;
    font-size: 35px;
    gap: 50px;
}

.gameover-screen > div,
.gamewin-screen > div {
    cursor: pointer;
    transition: all 0.15s ease;
    margin-top: 50px;
}

.gameover-screen > div:hover,
.gamewin-screen > div:hover {
    filter: drop-shadow(0 0 5px rgba(250, 250, 250, 0.8));
}

.gameover-screen {
    background-image: url("./assets/img/9_intro_outro_screens/game_over/oh no you lost!.png");
}

.gamewin-screen {
    background-image: url("./assets/img/9_intro_outro_screens/game_win/you-win.png");
}

.help-screen,
.screen {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    background: rgb(0 0 0 / 75%);
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    gap: 50px;
    color: white;
    text-align: center;
}

.help-screen h2,
.screen p {
    font-size: 42px;
}
/* ... */

